feat change author

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/emma-1994/my-test-message.git"
   },
-  "author": "",
+  "author": "serina_x",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/emma-1994/my-test-message/issues"
